# Persona_open

./: .gitignore  README.md  TESTING.md  cli.py  persona.py  pyproject.toml  sim.py  sim_results.json
.github/workflows/: ci.yml
docs/: research.md
examples/: attack_simulator.py  demo_proxy.py  test_integration.py
persona/: __init__.py  attacks.py  identity.py  ipi.py  openclaw.py  proxy.py  rules.py
persona/benchmarks/: __init__.py  agentdojo_defense.py  run_benchmark.py
secureagent/: __init__.py  callchain.py  domain.py  normalizer.py  openclaw.py  proxy.py  toolguard.py
secureagent/benchmarks/: __init__.py  agentdojo_defense.py  run_benchmark.py
tests/: conftest.py  test_callchain.py  test_credentials.py  test_domain.py  test_hmac.py  test_identity.py  test_ipi.py  test_normalizer.py  test_openclaw.py  test_proxy.py  test_toolguard.py  test_tools.py
