[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "persona-proxy"
version = "0.1.0"
description = "Runtime security proxy for AI agents - detect and block credential leaks, unauthorized tool execution, and data exfiltration"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Juan Pablo Baquero", email = "baquerojuan99@gmail.com"}
]
keywords = ["ai", "security", "agents", "llm", "proxy", "credential-detection", "tool-execution"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "black>=23.0",
]

langchain = [
    "langchain>=0.1",
]

crewai = [
    "crewai>=0.1",
]

benchmark = [
    "agentdojo>=0.1",
]

[project.urls]
Homepage = "https://github.com/JuanBaquero99/Persona_open"
Documentation = "https://github.com/JuanBaquero99/Persona_open#readme"
Repository = "https://github.com/JuanBaquero99/Persona_open"
Issues = "https://github.com/JuanBaquero99/Persona_open/issues"

[tool.setuptools]
packages = ["persona", "persona.benchmarks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=persona --cov-report=term-missing"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 100
target-version = "py39"
